# OMERTAOS

./: .dockerignore  .editorconfig  .env.bigdata.example  .env.example  .env.schema  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  dev.env  docker-compose.bigdata.yml  docker-compose.local.yml  docker-compose.obsv.yml  docker-compose.quickstart.yml  docker-compose.vllm.yml  docker-compose.yml  docker-compose.yml.bak  install.ps1  install.sh  install_all_win.ps1  next.config.mjs  package.json  playwright.config.ts  pr_commit_plan.json  pyproject.toml  quick-install.ps1  quick-install.sh  requirements.txt  sitecustomize.py  tailwind.config.ts  tsconfig.json  (+2 more)
.aionos/: AGENT.md  commands.md  standards.md
ai_registry/: README.md  REGISTRY.yaml  registry.lock.json
aionos_control/: __init__.py  main.py
aionos_core/: __init__.py  cli.py
app/: __init__.py  layout.tsx
bigdata/: .env.bigdata.example  .env.example  docker-compose.bigdata.yml
builder/: __init__.py  app.py
ci/: verify.sh
cli/: __init__.py  aion_pkg.py  backup.py  install.py  main.py  personal.py  policy.py  status.py
components/: dashboard-shell.tsx  providers.tsx  sign-in-form.tsx
config/: aionos.config.yaml  capabilities.json  capabilities.yaml  navigation.json  vault-dev.hcl
config-schemas/: data-sources.schema.json  module.aip.schema.json  providers.schema.json  router.policy.schema.json
configs/: rollout-policy.yaml  seal-default.yaml
console/: .env.local.example  .eslintrc.json  Dockerfile  README.md  app.config.ts  middleware.ts  (+8 more)
control/: Dockerfile  Makefile  README.md  agent_lifecycle.py  app.py  context_manager.py  pyproject.toml  requirements.txt  run_uvicorn.py  task_queue.py
control/aionos_control/: __init__.py
control/aionos_control/plugins/entries/: __init__.py  cleanlab_entry.py  nevergrad_entry.py
control/app/: ai_router.py  config.py  config_paths.py  database.py  db.py  deps.py  grpc_server.py  llm_local.py  main.py  models.py  orchestrator.py  policy.py  router_engine.py  schemas.py  security.py  settings.py
control/app/api/: __init__.py  datasources.py  health.py  modules.py  providers.py  router.py  webhooks.py
control/app/core/: __init__.py  deps.py  state.py  workers.py
control/app/db/: retention_mongo.py
control/app/db/migrations/: 002_create_dataset_catalog.sql
control/app/grpc/aion/v1/: tasks_pb2.py  tasks_pb2_grpc.py
control/app/models/: __init__.py  registry.py
control/app/protos/: aion_pb2.py  aion_pb2_grpc.py
control/app/rag/: __init__.py  ingest.py
control/app/routers/: tasks.py
control/app/routes/: __init__.py  admin_onboarding.py  agent.py  ai_chat.py  deps.py  ingest_excel.py  kernel.py  kernel_proposals.py  memory.py  models.py  rag.py
control/app/schemas/: __init__.py  router_policy.py  webhook.py
control/app/services/: grpc_client.py  router.py  telemetry.py
control/app/services/protobuf/: __init__.py  execution_pb2.py  execution_pb2_grpc.py
control/app/vector/: qdrant_client.py
control/tests/: conftest.py  test_config_paths.py  test_decision.py  test_health.py  test_kernel_proposals.py  test_memory_routes.py  test_model_registry.py  test_plugins_api.py  test_router.py  test_tasks.py
execution/: Cargo.toml  Dockerfile  agent_optimizer.rs  agent_registry.rs  build.rs  resource_controller.rs  sandbox_runner.rs
execution/modules/sample/: manifest.yaml
execution/proto/: aion.proto  execution.proto
execution/src/: lib.rs  main.rs  server.rs
modules/host/: Cargo.toml
modules/host/src/: main.rs
os/control/: Dockerfile  ai_router.py  config.py  config_paths.py  grpc_server.py  http.py  llm_local.py  main.py  orchestrator.py  policy.py  pyproject.toml  router_engine.py
os/control/aion_grpc/: __init__.py
os/control/aion_grpc/aion/: __init__.py
os/control/aion_grpc/aion/v1/: __init__.py  tasks_pb2.py  tasks_pb2_grpc.py
os/control/aionos_control/: main.py
os/control/aionos_control/plugins/: registry.py
os/control/aionos_control/plugins/entries/: stumpy_entry.py
os/control/aionos_control/routes/: __init__.py  plugins.py
os/control/api/: __init__.py  datasources.py  health.py  modules.py  providers.py  router.py  webhooks.py
os/control/core/: __init__.py  deps.py  logger.py  state.py  tenancy.py  workers.py
os/control/db/: __init__.py  retention_mongo.py
os/control/models/: __init__.py  registry.py
os/control/os/: __init__.py  ai_router.py  config.py  config_paths.py  grpc_server.py  healthcheck.py  http.py  main.py  orchestrator.py  policy.py  router_engine.py
os/control/os/agent_catalog/: __init__.py  catalog.py  store.py
os/control/os/aion_grpc/aion/v1/: tasks_pb2.py
os/control/os/api/: __init__.py  agent_catalog.py  auth_admin.py  backup.py  config.py  datasets.py  datasources.py  files.py  health.py  logs.py  metrics.py  models.py  modules.py  packages.py  providers.py  provisioner.py  recommendations.py  registry.py  router.py  security.py  services.py  update.py  webhooks.py
os/control/os/core/: __init__.py  deps.py  state.py  workers.py
os/control/os/db/migrations/: 001_add_tenant_columns.sql
os/control/os/models/: registry.py
os/control/os/rag/: __init__.py  ingest.py
os/control/os/recommendations/: __init__.py  latentbox.py  store.py
os/control/os/registry/: __init__.py  aggregator.py
os/control/os/routes/: __init__.py  admin_onboarding.py  ai_chat.py  config.py  deps.py  ingest_excel.py  kernel_proposals.py  memory.py  models.py  profile.py  rag.py  seal.py
os/control/os/schemas/: __init__.py  agent.py  module.py  recommendations.py
os/control/os/vector/: qdrant_client.py
os/control/rag/: __init__.py  ingest.py  qdrant_client.py
os/control/routes/: __init__.py  admin_onboarding.py  agent.py  ai_chat.py  deps.py  ingest_excel.py  kernel_proposals.py  memory.py  models.py  rag.py
os/control/schemas/: __init__.py  datasource.py  module.py  provider.py  router_policy.py  webhook.py
os/control/vector/: __init__.py  qdrant_client.py
(+1095 files in other folders)
