[project]
name = "aionos-app"
version = "0.1.0"
description = "AION-OS core and control application package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
control = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "httpx>=0.27",
    "redis>=5",
    "orjson>=3.10",
    "pydantic-settings>=2.2",
    "asyncpg>=0.29",
    "motor>=3.3",
    "qdrant-client>=1.7",
    "aiokafka>=0.10",
    "python-json-logger>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "protobuf>=4.25",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "minio>=7.2",
    "clickhouse-connect>=0.7",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9",
]
kernel = [
    "pyyaml>=6.0",
]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "mypy"]
ml-automl = ["pycaret"]
ml-explain = ["shapash", "aix360", "cleanlab"]
ml-features = ["featuretools"]
ml-graphviz = ["pygwalker", "hypertools"]
ml-optim = ["nevergrad", "cvxpy>=1.5", "cvxpylayers"]
ml-ppl = ["pyro-ppl"]
ml-timeseries = ["stumpy", "pysindy"]
ml-ui = ["taipy"]
notebook-addons = ["mitoinstaller", "mitosheet", "jupyterlab>=4"]
all = [
    "aionos-app[control,kernel]",
]
all-ml = [
    "aix360",
    "shapash",
    "cleanlab",
    "stumpy",
    "pysindy",
    "nevergrad",
    "cvxpy",
    "cvxpylayers",
    "pycaret",
    "pygwalker",
    "hypertools",
    "featuretools",
    "pyro-ppl",
    "taipy",
    "mitoinstaller",
    "mitosheet",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["sitecustomize"]

[tool.setuptools.packages.find]
include = ["os*", "aionos_control*"]
