[project]
name = "aionos-core"
version = "0.2.0"
description = "Unified AION-OS core meta-package and CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.32",
    "typer>=0.12",
]

[project.optional-dependencies]
control = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "redis>=5",
    "orjson>=3.10",
    "pydantic-settings>=2.2",
    "asyncpg>=0.29",
    "motor>=3.3",
    "qdrant-client>=1.7",
    "aiokafka>=0.10",
    "python-json-logger>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "protobuf>=4.25",
    "pyyaml>=6.0",
    "hvac>=1.2",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "minio>=7.2",
    "clickhouse-connect>=0.7",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9",
    "psutil>=5.9",
    "pycryptodome>=3.20",
]
kernel = [
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "requests>=2.32",
]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "mypy"]
ml-automl = ["pycaret"]
ml-explain = ["shapash", "aix360", "cleanlab"]
ml-features = ["featuretools"]
ml-graphviz = ["pygwalker", "hypertools"]
ml-optim = ["nevergrad", "cvxpy>=1.5", "cvxpylayers"]
ml-ppl = ["pyro-ppl"]
ml-timeseries = ["stumpy", "pysindy"]
ml-ui = ["taipy"]
notebook-addons = ["mitoinstaller", "mitosheet", "jupyterlab>=4"]
ml-local = [
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.5,<2.0",
    "xgboost>=2.0,<3.0",
    "lightgbm>=4.3,<5.0",
    "tensorflow>=2.16,<3.0 ; platform_system != \"Windows\"",
    "torch>=2.3,<3.0",
    "cleanlab>=2.6,<3.0",
    "httpx>=0.27,<0.28",
]
all = [
    "aionos-app[control,kernel]",
]
all-ml = [
    "aix360",
    "shapash",
    "cleanlab",
    "stumpy",
    "pysindy",
    "nevergrad",
    "cvxpy",
    "cvxpylayers",
    "pycaret",
    "pygwalker",
    "hypertools",
    "featuretools",
    "pyro-ppl",
    "taipy",
    "mitoinstaller",
    "mitosheet",
]

[project.scripts]
aionos = "aionos_core.cli:main"
aion-pkg = "cli.aion_pkg:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["sitecustomize"]

[tool.setuptools.packages.find]
include = ["aionos_core*", "app*", "os*", "aionos_control*", "aion*"]
