[package]
name = "aion-execution"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = { version = "0.11", features = ["transport"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[build-dependencies]
tonic-build = "0.11"
