[package]
name = "module_host"
version = "0.1.0"
edition = "2021"
authors = ["aionOS Contributors"]
description = "Module host for executing WASM or subprocess modules"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = { version = "0.11", features = ["transport", "codegen"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
seccompiler = { version = "0.5", features = ["json"] }
libc = "0.2"
